--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,94 @@
  }
 
 
+
+ /* Jorge empieza aqui */
+
+ .container5 {
+    display: flex;
+}
+
+.container5__posicion-titulo {
+    text-align: justify;
+    width: 15vw;
+    height: 15vh;
+    position: absolute;
+    left: 818px;
+    top: 150px;
+}
+
+.container5--titulo{
+    font-family: 'Dancing Script', cursive;
+    text-align: center;
+    font-size: 3vh;
+    font-weight: bolder;
+}
+
+.container5__top {
+    background-color: rgba(201, 201, 201, 0.26);
+    width: 100vw;
+    height: 50vh;
+}
+
+.container5__mid1 {
+    background-color: white;
+    width: 250px;
+    height: 300px;
+    position: absolute;
+    left: 500px;
+    top: 150px;
+    padding: 1vh;
+}
+
+.container5__mid2{
+    background-color: white;
+    width: 250px;
+    height: 300px;
+    position: absolute;
+    left: 800px;
+    top: 280px;
+    padding: 1vh;
+}
+
+.container5__mid3{
+    background-color: white;
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    left: 525px;
+    top: 500px;
+    padding: 1vh;
+}
+
+.mid1--imagen {
+    background-image: url(./imagenes/bodas.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 50%;
+}
+
+.mid2--imagen {
+    background-image: url(./imagenes/bodas2.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 50%;
+}
+
+.mid2-container5--texto {
+    text-align: justify;
+}
+
+
+.mid3--imagen {
+    background-image: url(./imagenes/bodas3.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.container5__bottom {
+    background-color: rgb(255, 255, 255);
+    width: 100vw;
+    height: 50vh;
+}
+
