--- a/styles.css
+++ b/styles.css
@@ -1,197 +1,129 @@
-* {   
-    padding: 0;
-    margin: 0;
-}
+/* daniel*/
 
-.contenedor0 {
-    background-image: url(https://images.pexels.com/photos/2395249/pexels-photo-2395249.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);
-    /*background-position: center;*/
-    display: flex;
-    background-repeat: no-repeat; 
-    background-size: cover;    
-    height: 80vh;
-    width: 100vw;   
-    padding: 0px;
-}
-
-.contenedor1 {
-    background-color: rgba(151, 55, 55, 0.767);
-    left: 10vh;
-    margin-top: 10vh;
-    margin-left: 33vw;
-    width:66vw;
-    height: 50vh;
-    padding: 0px;
-}
-
-.contenedor2 {
-    display: flex;
-}
-
-.bgbase__color1 {
-    background-color: rgb(187, 104, 104);
-    display: absolute;
-    width: 50vw;
-    height: 70vh;
-    
-}
-.bgoverlay__color {
-    background-color: white;
-    color: rgb(187, 104, 104);
-    display: absolute;
-    width: 40vw;
-    height: 60vh;
-}
-.bgbase__color2 {
-    background-color: white;
-    color: rgb(187, 104, 104);
-    display: absolute;
-    width: 50vw;
-    height: 70vh;
-    padding:0vw; 
-}
-.portada__cta--titulo {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
-    display: block;
-    margin: auto;
-    color: white;
-    width: 50vw;
-    padding-left: 20vw;
-    padding-right: 20vw;
-    padding-top: 5vh;
-}
-.portada__titulo--uno {
-    font-size: 6vw;
-}
-.portada__titulo--tres {
-    font-size: 3vw;
-}
-.portada__titulo--seis {
-        font-size: 1vw;
-}
-.bloque__principal{
+.bloque__principal {
     margin-top: 30px;
-    
+
 
 }
 
-.primera__columna{
-    background-color: lightslategray;
+.primera__columna {        
+    background-color: rgb(187, 104, 104);
     height: 410px;
     width: 350px;
     margin-right: 12px;
     margin-left: 12px;
-    
-       
+
+
 }
-.primera__columna img{
+
+.primera__columna img {
     width: 300px;
     height: 250px;
     border-radius: 100%;
-    
+
 }
 
-.primera__columna--parrafo{
+.primera__columna--parrafo {
     font-size: 40px;
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    
+
 }
 
 
-.segunda__columna{
-    background-color: aliceblue;
+.segunda__columna {
+    background-color: rgb(151, 55, 55);
     height: 300px;
     width: 300px;
-    
+
 }
-.segunda__columna--parrafo{
+
+.segunda__columna--parrafo {
     color: black;
     font-size: 4vh;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 700;
     padding-top: 30px;
-    
+
 
 }
 
-.tercera__columna{
+.tercera__columna {
     height: 300px;
     width: 300px;
-   
-    
+
+
 }
 
-.tercera__columna img{
+.tercera__columna img {
     height: 300px;
     width: 300px;
-   
-    
+
+
 }
 
-.cuarta__columna{
+.cuarta__columna {
     height: 300px;
     width: 150px;
     margin-right: 62px;
     margin-top: 5px;
-    
- 
+
+
 }
-.cuarta__columna img{
+
+.cuarta__columna img {
     width: 170px;
     height: 300px;
 }
 
-.quinta__columna{
-    background-color: aliceblue;
+.quinta__columna {
+    background-color: rgba(151, 55, 55, 0.700);
     height: 300px;
     width: 150px;
     margin-right: 5px;
     margin-top: 5px;
-  }
+}
 
-  .quinta__columna--parrafo{
+.quinta__columna--parrafo {
     color: black;
     font-size: 2vh;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 700;
     padding-top: 30px;
     font-weight: 900;
-  }
+}
 
-  .quinta__columna--parrafo2{
-      font-size: 12px;
-  }
+.quinta__columna--parrafo2 {
+    font-size: 12px;
+}
 
-.sexta__columna{
-    background-color: lightsteelblue;
+.sexta__columna {
+    background-color: rgb(187, 104, 104, 0.700);
     height: 405px;
     width: 612px;
     margin-top: 5px;
     position: relative;
     left: 375px;
     bottom: 410px;
- }
+}
 
- .sexta__columna--parrafo{
-     font-size: 40px;
-     font-family: 'Times New Roman', Times, serif;
-     font-weight: bold;
-     padding-top: 50px;
- }
+.sexta__columna--parrafo {
+    font-size: 40px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    padding-top: 50px;
+}
 
- .sexta__columna img{
-     width: 12vw;
-     margin-left: 350px;
-     border-radius: 50%;
-     position: relative;
- }
+.sexta__columna img {
+    width: 12vw;
+    margin-left: 350px;
+    border-radius: 50%;
+    position: relative;
+}
 
+/* Jorge empieza aqui */
 
-
- /* Jorge empieza aqui */
-
- .container5 {
+.container5 {
     display: flex;
 }
 
@@ -204,7 +136,7 @@
     top: 150px;
 }
 
-.container5--titulo{
+.container5--titulo {
     font-family: 'Dancing Script', cursive;
     text-align: center;
     font-size: 3vh;
@@ -212,7 +144,7 @@
 }
 
 .container5__top {
-    background-color: rgba(201, 201, 201, 0.26);
+    background-color: rgb(187, 104, 104);
     width: 100vw;
     height: 50vh;
 }
@@ -227,7 +159,7 @@
     padding: 1vh;
 }
 
-.container5__mid2{
+.container5__mid2 {
     background-color: white;
     width: 250px;
     height: 300px;
@@ -237,7 +169,7 @@
     padding: 1vh;
 }
 
-.container5__mid3{
+.container5__mid3 {
     background-color: white;
     width: 200px;
     height: 200px;
@@ -265,7 +197,6 @@
     text-align: justify;
 }
 
-
 .mid3--imagen {
     background-image: url(./imagenes/bodas3.jpg);
     background-size: cover;
@@ -279,11 +210,9 @@
     height: 50vh;
 }
 
-
-
 /* Giani */
 
-.color_blanco_1{
+.color_blanco_1 {
     background-color: white;
     width: vmax;
     height: 30vh;
@@ -291,97 +220,81 @@
     justify-content: center;
 }
 
-.idem{
-  
+.idem {
     width: 175px;
     height: 275px;
 }
 
-.idem__h2{
-text-align: center;
-} 
+.idem__h2 {
+    text-align: center;
+}
 
-.idem__p{
+.idem__p {
     text-align: justify;
     font-family: 'Pacifico', cursive;
 }
 
 .idem img {
     border-radius: 50%;
-  
 }
 
-.color_gris_1{
-    background-color: rgba(218,218,218,1);
+.color_gris_1 {
+    background-color: rgb(187, 104, 104);
     width: vmax;
     height: 40vh;
 }
 
-.color_gris_2{
-    background-color: rgba(218,218,218,1);
+.color_gris_2 {
+    background-color: rgb(187, 104, 104);
     width: vmax;
     height: 30vh;
     display: flex;
     justify-content: center;
-  
 }
 
-.color_gris_2 img{ 
+.color_gris_2 img {
     margin: 0;
 }
 
-.comentario{
+.comentario {
     width: 300px;
     height: 250px;
     background-color: white;
     position: absolute;
     left: 200px;
     top: 680px;
-    border-color: rgba(218,218,218,1);
+    border-color: rgba(151, 55, 55);
     border-width: 7px;
     border-style: solid;
     padding: 15px;
     padding-top: 0%;
+}
 
-}
-.comentario__h5{
+.comentario__h5 {
     text-align: center;
-    
-    
 }
-.comentario__h2{
+
+.comentario__h2 {
     text-align: justify;
     font-family: 'Dancing Script', cursive;
     font-size: x-large;
 }
-.comentario__button{
+
+.comentario__button {
     margin-left: 40%;
     border-radius: 15%;
-    background-color:rgba(218,218,218,1) ;
+    background-color: rgba(218, 218, 218, 1);
 }
-.color_blanco_2{
-    background-color: white;
+
+.color_blanco_2 {
+    background-color: rgb(187, 104, 104);
     width: vmax;
     height: 20vh;
-    
 }
-
-
-
-
 
 /* Nicole */
 
-
-/*main {
-    background-image: url(https://images.pexels.com/photos/2395249/pexels-photo-2395249.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);
-    background-position: center;
-    display: flex;
-    height: 80vh;
-    width:100vw;
-    align-content: center;
-}*/
-* {   
+* {
     padding: 0;
     margin: 0;
 }
@@ -390,10 +303,10 @@ text-align: center;
     background-image: url(https://images.pexels.com/photos/2395249/pexels-photo-2395249.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);
     /*background-position: center;*/
     display: flex;
-    background-repeat: no-repeat; 
-    background-size: cover;    
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 80vh;
-    width: 100vw;   
+    width: 100vw;
     padding: 0px;
 }
 
@@ -402,7 +315,7 @@ text-align: center;
     left: 10vh;
     margin-top: 10vh;
     margin-left: 33vw;
-    width:66vw;
+    width: 66vw;
     height: 50vh;
     padding: 0px;
 }
@@ -416,8 +329,8 @@ text-align: center;
     display: absolute;
     width: 50vw;
     height: 70vh;
-    
 }
+
 .bgoverlay__color {
     background-color: white;
     color: rgb(187, 104, 104);
@@ -425,16 +338,18 @@ text-align: center;
     width: 40vw;
     height: 60vh;
 }
+
 .bgbase__color2 {
     background-color: white;
     color: rgb(187, 104, 104);
     display: absolute;
     width: 50vw;
     height: 70vh;
-    padding:0vw; 
+    padding: 0vw;
 }
+
 .portada__cta--titulo {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: block;
     margin: auto;
     color: white;
@@ -443,34 +358,25 @@ text-align: center;
     padding-right: 20vw;
     padding-top: 5vh;
 }
+
 .portada__titulo--uno {
     font-size: 6vw;
 }
+
 .portada__titulo--tres {
     font-size: 3vw;
 }
+
 .portada__titulo--seis {
-        font-size: 1vw;
+    font-size: 1vw;
 }
+
 /*rgb(187, 104, 104)
 rgba(151, 55, 55, 0.767)*/
 
-
-
-
-
 /*  adicionales  */
-footer{
-    display: relative;
-}
-.footer__black{
-    background-color: black;
-    height: 20vh;
+
+footer {
+   text-align: center;
 }
 
-
-
-.footer__text--texto{
-    color: white;
-   
-}
